metadata/force-app/main/default/objects/Activity/fields/Active_User_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Active_User_Assigned_To__c</fullName>
    <formula>IF(Owner:User.Id=$User.Id,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active User Assigned To?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>