metadata/force-app/main/default/objects/Activity/fields/Active_User_Booked_by__c.field-meta.xml
<CustomField>
    <fullName>Active_User_Booked_by__c</fullName>
    <formula>IF(BDR__c=$User.Id,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active User Booked by?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>