metadata/force-app/main/default/objects/Activity/fields/Activity_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Completed_Date__c</fullName>
    <label>Activity Completed Date</label>
    <type>Date</type>
</CustomField>