metadata/force-app/main/default/objects/Activity/fields/Activity_Content__c.field-meta.xml
<CustomField>
    <fullName>Activity_Content__c</fullName>
    <label>Activity Content</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery Call</fullName>
            </value>
            <value>
                <fullName>IT/Security Review</fullName>
            </value>
            <value>
                <fullName>Pricing Discussion</fullName>
            </value>
            <value>
                <fullName>Solutions Scope</fullName>
            </value>
            <value>
                <fullName>Proposal Review</fullName>
            </value>
            <value>
                <fullName>Procurement / Negotiations</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>