metadata/force-app/main/default/objects/Activity/fields/Activity_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_Legacy_ID__c</fullName>
    <label>Activity Legacy ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>