metadata/force-app/main/default/objects/Activity/fields/Assigned_To_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Team__c</fullName>
    <description>It shows the sales team information about assigned to users</description>
    <formula>Owner:User.Sales_Team__c</formula>
    <label>Assigned to Sales Team</label>
    <type>Text</type>
</CustomField>