metadata/force-app/main/default/objects/Activity/fields/BDR__c.field-meta.xml
<CustomField>
    <fullName>BDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booked by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>