metadata/force-app/main/default/objects/Activity/fields/BDR_old__c.field-meta.xml
<CustomField>
    <fullName>BDR_old__c</fullName>
    <label>BDR responsible</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Floris van Nieuwland</fullName>
            </value>
            <value>
                <fullName>Gautier Roy</fullName>
            </value>
            <value>
                <fullName>Marko</fullName>
            </value>
            <value>
                <fullName>Rinske</fullName>
            </value>
            <value>
                <fullName>Serena Vlieger</fullName>
            </value>
            <value>
                <fullName>Vince Duc</fullName>
            </value>
            <value>
                <fullName>Julia Hoch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>