metadata/force-app/main/default/objects/Activity/fields/BDR_Reactivated__c.field-meta.xml
<CustomField>
    <fullName>BDR_Reactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Discovery Call that was booked due to BDR reactivation of lead for Inbound sourced to Outbound.</description>
    <inlineHelpText>Check this box if Outbound Prospecting occurred less than 3 months before booking this Discovery Call and the source is Marketing.</inlineHelpText>
    <label>BDR Outbound Influenced</label>
    <type>Checkbox</type>
</CustomField>