metadata/force-app/main/default/objects/Activity/fields/bizible2__Bizible_Touchpoint_Date__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Bizible_Touchpoint_Date__c</fullName>
    <description>Custom date used to set the Touchpoint Date for Bizible Attribution. If blank, Created Date will be used.</description>
    <inlineHelpText>Custom date used to set the Touchpoint Date for Bizible Attribution. If blank, Created Date will be used.</inlineHelpText>
    <label>Bizible Touchpoint Date</label>
    <type>DateTime</type>
</CustomField>