metadata/force-app/main/default/objects/Activity/fields/Booked_By_BDR_Team__c.field-meta.xml
<CustomField>
    <fullName>Booked_By_BDR_Team__c</fullName>
    <formula>TEXT(BDR__r.BDR_Team__c)</formula>
    <label>Booked By BDR Team</label>
    <type>Text</type>
</CustomField>