metadata/force-app/main/default/objects/Activity/fields/Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration__c</fullName>
    <label>Call Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>