metadata/force-app/main/default/objects/Activity/fields/Call_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Call_Sentiment__c</fullName>
    <label>Call Sentiment (OLD)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>