metadata/force-app/main/default/objects/Activity/fields/Company_Size_New__c.field-meta.xml
<CustomField>
    <fullName>Company_Size_New__c</fullName>
    <description>BO-873: In order to create a consolidated report on activities on both Leads and Contacts with certain conditions on this information</description>
    <formula>IF(
  ISBLANK(WhoId) ,
  &quot;&quot;,
  IF(
    LEFT(WhoId, 3) = &apos;00Q&apos;, /* WhoId is Lead */
    TEXT(Lead__r.Company_Size_New__c),
    TEXT(Contact__r.Account.Company_Size_New__c)
  )
)</formula>
    <label>Company Size New</label>
    <type>Text</type>
</CustomField>