metadata/force-app/main/default/objects/Activity/fields/Competition_Total_Score_2__c.field-meta.xml
<CustomField>
    <fullName>Competition_Total_Score_2__c</fullName>
    <formula>Meetings_Webinars_Score__c + Log_a_Call_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competition: Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>