metadata/force-app/main/default/objects/Activity/fields/Connected__c.field-meta.xml
<CustomField>
    <fullName>Connected__c</fullName>
    <description>BODEV-1692 (formula updated): Checkbox for calculating how often we are speaking with Prospects. Tasks are created from SalesLoft/Drift/etc.</description>
    <formula>CONTAINS(Subject, &quot;Reply&quot;) ||
CONTAINS(Subject, &quot;Conversation in Drift&quot;) ||
CONTAINS(Subject, &quot;Default personal meeting&quot;) ||
CONTAINS(Subject, &quot;Call: connected&quot;) ||
CONTAINS(Subject, &quot;Meeting booked with Drift&quot;) ||
CONTAINS(Subject, &quot;Discovery call&quot;) ||
CONTAINS(Subject, &quot;Disco call&quot;) ||
CONTAINS(Subject, &quot;Chorus -&quot;) ||
CONTAINS(Subject, &quot;Demo&quot;) ||
CONTAINS(Subject, &quot;Zoom call&quot;)</formula>
    <inlineHelpText>Is this a reply?</inlineHelpText>
    <label>Connected</label>
    <type>Checkbox</type>
</CustomField>