metadata/force-app/main/default/objects/Activity/fields/Contact_Result__c.field-meta.xml
<CustomField>
    <fullName>Contact_Result__c</fullName>
    <label>Contact Result</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No answer from line</fullName>
            </value>
            <value>
                <fullName>Connect request</fullName>
            </value>
            <value>
                <fullName>Prospecting/message</fullName>
            </value>
            <value>
                <fullName>Call back requested</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Not appropriate contact</fullName>
            </value>
            <value>
                <fullName>Meeting booked</fullName>
            </value>
            <value>
                <fullName>Webinar booked</fullName>
            </value>
            <value>
                <fullName>Conversation</fullName>
            </value>
            <value>
                <fullName>Quality Conversation</fullName>
            </value>
            <value>
                <fullName>Passed to Sales Exec</fullName>
            </value>
            <value>
                <fullName>No show</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>Email sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>