metadata/force-app/main/default/objects/Activity/fields/Contact_Stage__c.field-meta.xml
<CustomField>
    <fullName>Contact_Stage__c</fullName>
    <label>Contact Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Contact Identified</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>