metadata/force-app/main/default/objects/Activity/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Customer: Important Date</fullName>
            </value>
            <value>
                <fullName>Customer Check-in</fullName>
            </value>
            <value>
                <fullName>Customer Discovery Call</fullName>
            </value>
            <value>
                <fullName>Customer Interest</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Discovery Call</fullName>
            </value>
            <value>
                <fullName>Dynamic Template Test</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Face-to-Face Meeting</fullName>
            </value>
            <value>
                <fullName>IT/Security Question</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Meeting Booked</fullName>
            </value>
            <value>
                <fullName>Online Meeting</fullName>
            </value>
            <value>
                <fullName>Product Question</fullName>
            </value>
            <value>
                <fullName>Trial Account</fullName>
            </value>
            <value>
                <fullName>Drift Chat Conversation</fullName>
            </value>
            <value>
                <fullName>Card/Letter/Mail</fullName>
            </value>
            <value>
                <fullName>Video Brand Studio Demo</fullName>
            </value>
            <value>
                <fullName>Postal</fullName>
            </value>
            <value>
                <fullName>Partner Introduction</fullName>
            </value>
            <value>
                <fullName>Partner Check In</fullName>
            </value>
            <value>
                <fullName>Booked in SalesLoft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>