metadata/force-app/main/default/objects/Activity/fields/Contact_Type_excl_Blank__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type_excl_Blank__c</fullName>
    <formula>IF(
	AND(ISBLANK(TEXT(Contact_Type__c)),CONTAINS(Subject,&quot;Email:&quot;)),
	&quot;Email&quot;,
	IF(
		AND(ISBLANK(TEXT(Contact_Type__c)),CONTAINS(Subject,&quot;LinkedIn&quot;)),
		&quot;LinkedIn&quot;,
	IF(
		AND(ISBLANK(TEXT(Contact_Type__c)),CONTAINS(Subject,&quot;InMail&quot;)),
		&quot;LinkedIn&quot;,
        IF(
		AND(ISBLANK(TEXT(Contact_Type__c)),CONTAINS(Subject,&quot;Chorus&quot;)),
		&quot;Chorus Meeting&quot;,

        IF(
		AND(ISBLANK(TEXT(Contact_Type__c)),CONTAINS(Subject,&quot;Drift&quot;)),
		&quot;Drift&quot;,
		TEXT(Contact_Type__c))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Type excl Blank</label>
    <type>Text</type>
</CustomField>