metadata/force-app/main/default/objects/Activity/fields/Created_before_without_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Created_before_without_opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This call happened before the related Opportunity was created or there is no related Opportunity. BODEV-4040</description>
    <label>Created before or without opportunity</label>
    <type>Checkbox</type>
</CustomField>