metadata/force-app/main/default/objects/Activity/fields/Created_by_automation_rule__c.field-meta.xml
<CustomField>
    <fullName>Created_by_automation_rule__c</fullName>
    <label>Created by automation rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task on Nurture &amp; Project on Hold</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>