metadata/force-app/main/default/objects/Activity/fields/Created_by_Role_del__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Role_del__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Role</label>
    <type>Text</type>
</CustomField>