metadata/force-app/main/default/objects/Activity/fields/Created_By_Team__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Team__c</fullName>
    <formula>TEXT(CreatedBy.BDR_Team__c)</formula>
    <label>Created By Team</label>
    <type>Text</type>
</CustomField>