metadata/force-app/main/default/objects/Activity/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <description>Date time value when activity was created.</description>
    <formula>CreatedDate</formula>
    <inlineHelpText>Date time value when activity was created.</inlineHelpText>
    <label>Created Date/Time</label>
    <type>DateTime</type>
</CustomField>