metadata/force-app/main/default/objects/Activity/fields/Current_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Role__c</fullName>
    <description>Current User role - used in the meeting booked process for BDRs</description>
    <formula>$UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Role</label>
    <type>Text</type>
</CustomField>