metadata/force-app/main/default/objects/Activity/fields/Days_since_completed_activity__c.field-meta.xml
<CustomField>
    <fullName>Days_since_completed_activity__c</fullName>
    <formula>Today() -   DATEVALUE(Timestamp_Activity_Completed__c)</formula>
    <label>Days since completed activity OLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>