metadata/force-app/main/default/objects/Activity/fields/Days_since_completed_activity_NEW__c.field-meta.xml
<CustomField>
    <fullName>Days_since_completed_activity_NEW__c</fullName>
    <formula>Today () -   DATEVALUE(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since completed activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>