metadata/force-app/main/default/objects/Activity/fields/Due_Date_greater_than_today__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_greater_than_today__c</fullName>
    <description>Is due date in the future? Used by activity counter</description>
    <formula>ActivityDate&gt;TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is due date in the future? Used by activity counter</inlineHelpText>
    <label>Due Date greater than today</label>
    <type>Checkbox</type>
</CustomField>