metadata/force-app/main/default/objects/Activity/fields/Email_Score__c.field-meta.xml
<CustomField>
    <fullName>Email_Score__c</fullName>
    <formula>IF(ISPICKVAL(Contact_Type__c,&quot;Email&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email - Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>