metadata/force-app/main/default/objects/Activity/fields/Gong__Activity_Source__c.field-meta.xml
<CustomField>
    <fullName>Gong__Activity_Source__c</fullName>
    <label>Activity Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>