metadata/force-app/main/default/objects/Activity/fields/Gong__Current_Flow_ID__c.field-meta.xml
<CustomField>
    <fullName>Gong__Current_Flow_ID__c</fullName>
    <label>Engage Flow ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>