metadata/force-app/main/default/objects/Activity/fields/Gong__Current_Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Gong__Current_Flow_Name__c</fullName>
    <label>Engage Flow Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>