metadata/force-app/main/default/objects/Activity/fields/Gong__Flow_Execution_ID__c.field-meta.xml
<CustomField>
    <fullName>Gong__Flow_Execution_ID__c</fullName>
    <label>Engage Step Attempt ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>