metadata/force-app/main/default/objects/Activity/fields/Gong__Gong_Activity_Id__c.field-meta.xml
<CustomField>
    <fullName>Gong__Gong_Activity_Id__c</fullName>
    <label>Gong Activity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>