metadata/force-app/main/default/objects/Activity/fields/Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group__c</fullName>
    <description>BO-873: In order to create a consolidated report on activities on both Leads and Contacts with certain conditions on this information</description>
    <formula>IF(
  ISBLANK(WhoId),
  &quot;&quot;,
  IF(
    LEFT(WhoId, 3) = &apos;00Q&apos;, /* WhoId is Lead */
    TEXT(Lead__r.Industry_Group__c),
    TEXT(Contact__r.Account.Industry_Group__c)
  )
)</formula>
    <label>Industry Group</label>
    <type>Text</type>
</CustomField>