metadata/force-app/main/default/objects/Activity/fields/Industry_ICP__c.field-meta.xml
<CustomField>
    <fullName>Industry_ICP__c</fullName>
    <description>BO-873: In order to create a consolidated report on activities on both Leads and Contacts with certain conditions on this information</description>
    <formula>IF(
  ISBLANK(WhoId),
  FALSE,
  IF(
    LEFT(WhoId, 3) = &apos;00Q&apos;, /* WhoId is Lead */
    Lead__r.Industry_ICP__c,
    Contact__r.Account.Industry_ICP__c
  )
)</formula>
    <label>Industry ICP</label>
    <type>Checkbox</type>
</CustomField>