metadata/force-app/main/default/objects/Activity/fields/Last_Touch__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch__c</fullName>
    <description>BODEV-921: Taks field to classify last touchpoint</description>
    <label>Last Touch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Drawing</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>LinkedIn Message</fullName>
            </value>
            <value>
                <fullName>Postal.io</fullName>
            </value>
            <value>
                <fullName>Salesloft Meeting Booked</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Qualified meeting booked</fullName>
            </value>
            <value>
                <fullName>Qualified chat flip</fullName>
            </value>
            <value>
                <fullName>Drift Conversation</fullName>
                <isActive>false</isActive>
                <label>Drift Conversation</label>
            </value>
            <value>
                <fullName>Drift Meeting Booked</fullName>
                <isActive>false</isActive>
                <label>Drift Meeting Booked</label>
            </value>
            <value>
                <fullName>Vidyard</fullName>
                <isActive>false</isActive>
                <label>Vidyard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>