metadata/force-app/main/default/objects/Activity/fields/LeanData__Log_Id__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Log_Id__c</fullName>
    <label>Log Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>