metadata/force-app/main/default/objects/Activity/fields/Log_a_Call_Score__c.field-meta.xml
<CustomField>
    <fullName>Log_a_Call_Score__c</fullName>
    <formula>IF(
AND(
ISPICKVAL(Contact_Type__c,&quot;Call&quot;),
NOT( 
ISPICKVAL(Contact_Result__c ,&quot;No answer from line&quot;))), 
1, 0) + 
IF(
AND(
ISPICKVAL(Contact_Type__c,&quot;Call&quot;),
ISPICKVAL(Contact_Result__c ,&quot;Quality Conversation&quot;)), 
5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log a Call - Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>