metadata/force-app/main/default/objects/Activity/fields/Meeting_Booked_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Booked_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For process that creates a meeting booked task for BDRs</description>
    <label>Meeting Booked Task Created</label>
    <type>Checkbox</type>
</CustomField>