metadata/force-app/main/default/objects/Activity/fields/Meetings_Webinars_Score__c.field-meta.xml
<CustomField>
    <fullName>Meetings_Webinars_Score__c</fullName>
    <formula>IF (ISPICKVAL(Contact_Result__c ,&quot;Meeting booked&quot;),60,0)+ IF (ISPICKVAL(Contact_Result__c , &quot;Webinar booked&quot;), 60, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meetings/Webinars - Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>