metadata/force-app/main/default/objects/Activity/fields/Most_Recent_Source__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Source__c</fullName>
    <description>BODEV-921: Task field to capture the most recent source</description>
    <label>Most Recent Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABM Influenced</fullName>
            </value>
            <value>
                <fullName>Behavioural (Outbound) MQL</fullName>
            </value>
            <value>
                <fullName>CTA (Inbound) MQL</fullName>
            </value>
            <value>
                <fullName>Customer Behavioural MQL (CDR)</fullName>
            </value>
            <value>
                <fullName>Customer CTA MQL (CDR)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Platform Transfer</fullName>
            </value>
            <value>
                <fullName>Prospecting Account Campaign</fullName>
            </value>
            <value>
                <fullName>Recycled Inbound (Inbound &gt; Outbound)</fullName>
                <label>Recycled Inbound/Outbound</label>
            </value>
            <value>
                <fullName>Subsidiary Account Prospecting (CDR)</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Upsell Account Prospecting (CDR)</fullName>
            </value>
            <value>
                <fullName>User Gem</fullName>
            </value>
            <value>
                <fullName>Outbound Reengaged</fullName>
            </value>
            <value>
                <fullName>Outbound Cold</fullName>
            </value>
            <value>
                <fullName>CDR Customer Tradeshow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>