metadata/force-app/main/default/objects/Activity/fields/New_activity_completed__c.field-meta.xml
<CustomField>
    <fullName>New_activity_completed__c</fullName>
    <label>New activity completed</label>
    <type>DateTime</type>
</CustomField>