metadata/force-app/main/default/objects/Activity/fields/of_calls__c.field-meta.xml
<CustomField>
    <fullName>of_calls__c</fullName>
    <formula>IF( ISPICKVAL( Contact_Type__c ,&quot;Call&quot;) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>