metadata/force-app/main/default/objects/Activity/fields/of_meetings_webinars__c.field-meta.xml
<CustomField>
    <fullName>of_meetings_webinars__c</fullName>
    <formula>IF( ISPICKVAL( Contact_Result__c , &quot;Meeting booked&quot;), 1, 0) + IF( ISPICKVAL( Contact_Result__c , &quot;Webinar booked&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of meetings/ webinars booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>