metadata/force-app/main/default/objects/Activity/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adobe Creative Connector</fullName>
            </value>
            <value>
                <fullName>Brand Guidelines</fullName>
            </value>
            <value>
                <fullName>CMS Connector</fullName>
            </value>
            <value>
                <fullName>Content Workflow</fullName>
            </value>
            <value>
                <fullName>DAM</fullName>
            </value>
            <value>
                <fullName>Digital Brand Templates</fullName>
            </value>
            <value>
                <fullName>Dynamic Asset Transformation</fullName>
            </value>
            <value>
                <fullName>Expansion Portal</fullName>
            </value>
            <value>
                <fullName>Marketing Automation Connector</fullName>
            </value>
            <value>
                <fullName>PIM Connector</fullName>
            </value>
            <value>
                <fullName>Print Brand Templates</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Other: Explain in Comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>