metadata/force-app/main/default/objects/Activity/fields/Qualified_Convo_or_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Convo_or_Meeting__c</fullName>
    <formula>IF(

CONTAINS(Subject, &quot;Conversation via Qualified&quot;) , &apos;Convo&apos;, 

IF(

CONTAINS(Subject, &quot;Meeting Booked via Qualified&quot;) , &apos;Meeting&apos;, 

NULL

)

)</formula>
    <label>Qualified Convo or Meeting?</label>
    <type>Text</type>
</CustomField>