metadata/force-app/main/default/objects/Activity/fields/Related_to_who_18_digits__c.field-meta.xml
<CustomField>
    <fullName>Related_to_who_18_digits__c</fullName>
    <formula>CASESAFEID(WhoId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related to Who (18 digits)</label>
    <type>Text</type>
</CustomField>