metadata/force-app/main/default/objects/Activity/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <formula>TEXT(Owner:User.Work_Location__c)</formula>
    <label>Sales Office</label>
    <type>Text</type>
</CustomField>