metadata/force-app/main/default/objects/Activity/fields/SalesLoft1__Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft1__Call_Disposition__c</fullName>
    <description>The SalesLoft disposition value that the user logged during the call.</description>
    <label>Call Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>